[tool.poetry]
name = "onion-be"
version = "0.1.0"
description = ""
authors = ["Congpc <congpc1305@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
sqlalchemy = "^1.3.20"
psycopg2-binary = "^2.8.5"
fastapi-utils = "^0.2.1"
alembic = "^1.7.6"
python-dotenv = "^0.19.2"
pytz = "^2022.1"
pycryptodome = "^3.15.0"
Pyrebase = "3.0.1"
web3 = "^5.30.0"
PyJWT = "^2.4.0"
schedule = "^1.1.0"
python-twitter-v2 = "^0.7.9"
python-telegram-bot = "^13.14"
tldextract = "^3.4.0"
firebase-admin = "^6.0.1"
pusher = "^3.3.0"
boto3 = "^1.26.37"
cloudinary="1.32.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
